--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     />
 
     <!-- SEO 基础优化 -->
-    <meta name="description" content="Wallpaper Gallery - 精选高清4K壁纸，涵盖动漫、风景、人像、游戏等多种分类，免费下载，支持电脑壁纸、手机壁纸和头像" />
-    <meta name="keywords" content="壁纸,高清壁纸,4K壁纸,桌面壁纸,手机壁纸,免费壁纸,动漫壁纸,风景壁纸,人像壁纸,游戏壁纸,头像" />
+    <meta
+      name="description"
+      content="Wallpaper Gallery - 精选高清4K壁纸，涵盖动漫、风景、人像、游戏等多种分类，免费下载，支持电脑壁纸、手机壁纸和头像"
+    />
+    <meta
+      name="keywords"
+      content="壁纸,高清壁纸,4K壁纸,桌面壁纸,手机壁纸,免费壁纸,动漫壁纸,风景壁纸,人像壁纸,游戏壁纸,头像"
+    />
     <meta name="author" content="Wallpaper Gallery" />
     <meta name="theme-color" content="#6366f1" />
 
@@ -18,7 +24,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wallpaper.061129.xyz/" />
     <meta property="og:title" content="Wallpaper Gallery - 精选高清壁纸" />
-    <meta property="og:description" content="免费高清 4K 壁纸，涵盖动漫、风景、人像等多种分类，支持电脑壁纸、手机壁纸和头像下载" />
+    <meta
+      property="og:description"
+      content="免费高清 4K 壁纸，涵盖动漫、风景、人像等多种分类，支持电脑壁纸、手机壁纸和头像下载"
+    />
     <meta property="og:image" content="https://wallpaper.061129.xyz/og-image.jpg" />
     <meta property="og:site_name" content="Wallpaper Gallery" />
     <meta property="og:locale" content="zh_CN" />
@@ -83,7 +92,9 @@
       }
 
       /* 基础重置 */
-      *, *::before, *::after {
+      *,
+      *::before,
+      *::after {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
@@ -103,7 +114,9 @@
         line-height: 1.6;
         color: var(--color-text-primary);
         background-color: var(--color-bg-primary);
-        transition: background-color var(--transition-slow), color var(--transition-slow);
+        transition:
+          background-color var(--transition-slow),
+          color var(--transition-slow);
         min-height: 100vh;
         overflow-x: clip;
         padding-bottom: env(safe-area-inset-bottom);
@@ -129,16 +142,20 @@
       }
 
       @keyframes shimmer {
-        0% { transform: translateX(-100%); }
-        100% { transform: translateX(100%); }
+        0% {
+          transform: translateX(-100%);
+        }
+        100% {
+          transform: translateX(100%);
+        }
       }
     </style>
 
     <!-- DNS 预解析和预连接（加速 CDN 加载） -->
-    <link rel="preconnect" href="https://unpkg.com" crossorigin>
-    <link rel="dns-prefetch" href="https://unpkg.com">
-    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://unpkg.com" crossorigin />
+    <link rel="dns-prefetch" href="https://unpkg.com" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
 
     <!-- Import Map: 映射裸模块说明符到 CDN (使用 unpkg - Cloudflare CDN，国内访问更稳定) -->
     <script type="importmap">
